# LazyLab

./: LICENSE  package.json  pnpm-lock.yaml
src/: Root.tsx  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/app/: commands.rs  mod.rs  state.rs
src-tauri/src/ssh/: client.rs  command.rs  interface.rs  mod.rs  session.rs
src/components/: AppBar.tsx  Logo.tsx  SessionInterfaces.tsx  SessionsTable.tsx
src/pages/: AddSessionModal.tsx  ConfigSessionModal.tsx  HomePage.tsx  SessionsPage.tsx  router.tsx
src/stores/: sessions.ts
